--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: blanchedalmond;
+    background-image: url("./images/Phoenix\ Seagull\ Debatable.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: black;
   }
   
   header {
@@ -10,6 +17,18 @@ body {
     color: #fff;
     padding: 20px;
   }
+
+  .inicio {
+    width: 800px; /* Ancho de la caja */
+    margin: 0 auto; /* Centrar horizontalmente */
+    padding: 20px; /* Espacio interno */
+    background-color: #f1f1f1; /* Color de fondo */
+    border: 1px solid #ccc; /* Borde */
+    color:black;
+  }
+
+
+  
 
  
   
@@ -32,9 +51,30 @@ body {
   main {
     margin: 20px;
   }
+
+  .guardianship {
+    background-image: url("./images/guardianship+lawyer+Oklahoma.jpg");
+    background-color: blanchedalmond;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #f5f5f5;
+  }
+
+  .phoenix {
+    background-color: blanchedalmond;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: black;
+  }
+
+
   
   footer {
-    background-color: #333;
+    background-color: #333; 
     color: #fff;
     padding: 10px;
     text-align: center;
@@ -51,7 +91,7 @@ body {
     text-align: center;
   }
   
-  #intro {
+  #iinformativa {
     background-color: #f5f5f5;
     padding: 20px;
     margin-bottom: 20px;
