--- a/styles.css
+++ b/styles.css
@@ -1,103 +1,92 @@
 /* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: blanchedalmond;
-    background-image: url("./images/Phoenix\ Seagull\ Debatable.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: black;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
+nav {
+  background-color:blanchedalmond;
+  padding: 10px;
+  text-align: center;
+}
 
-  .inicio {
-    width: 800px; /* Ancho de la caja */
-    margin: 0 auto; /* Centrar horizontalmente */
-    padding: 20px; /* Espacio interno */
-    background-color: #f1f1f1; /* Color de fondo */
-    border: 1px solid #ccc; /* Borde */
-    color:black;
-  }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
+li {
+  display: inline;
+  margin-right: 10px;
+}
 
-  
+a {
+  text-decoration: none;
+  color: #333;
+}
 
- 
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  main {
-    margin: 20px;
-  }
+a:hover {
+  color: #666;
+}
 
-  .guardianship {
-    background-image: url("./images/guardianship+lawyer+Oklahoma.jpg");
-    background-color: blanchedalmond;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: #f5f5f5;
-  }
-
-  .phoenix {
-    background-color: blanchedalmond;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: black;
-  }
+#btn-up {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+}
 
 
-  
-  footer {
-    background-color: #333; 
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  /* Specific Styles */
-  h1 {
-    margin: 0;
-   text-align: center;
-  }
-  
-  h2 {
-    color: #333;
-    text-align: center;
-  }
-  
-  #iinformativa {
-    background-color: #f5f5f5;
-    padding: 20px;
-    margin-bottom: 20px;
-  }
-  
-  #content {
-    padding: 20px;
-  }
-  
+section {
+  margin-bottom: 20px;
+}
+
+.inicio {
+  width: 800px; /* Ancho de la caja */
+  margin: 0 auto; /* Centrar horizontalmente */
+  padding: 20px; /* Espacio interno */
+  background-color: #f1f1f1; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde */
+  color:black;
+}
+
+h2 {
+  color: #333;
+}
+
+p {
+  color: #666;
+}
+
+footer {
+  text-align: center;
+}
+
+#home{
+ text-align: center;
+ background-color: bisque;
+ background-size: cover;
+}
+
+body{
+  background-color: bisque;
+}
+
+.container {
+  text-align: center;
+}
+
+.card-columns {
+  margin: 0 auto;
+  background-color:blanchedalmond;
+}
+
+#guardianship{
+  text-align: center;
+}
+
+
+
+
+
