--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,15 @@ body{
   text-align: center;
 }
 
+.pdf-section {
+  cursor: pointer;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  width: 200px;
+  text-align: center;
+}
+
 
 
 
